--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "clsx": "^2.1.1",
     "convex": "^1.32.0",
+    "convex-helpers": "^0.1.113",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
